--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_API_URL=http://localhost:3000/api
+# Local
+# VITE_API_URL=http://localhost:3000/api
+# Prod
+VITE_API_URL=http://54.147.177.91:3000/api
+
