--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Local
 # VITE_API_URL=http://localhost:3000/api
 # Prod
-VITE_API_URL=http://54.147.177.91:3000/api
+# VITE_API_URL=http://54.147.177.91:3000/api
+VITE_API_URL=https://api.qhtclinic.com/
 
