--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 # VITE_API_URL=http://localhost:3000/api
 # Prod
 # VITE_API_URL=http://54.147.177.91:3000/api
-VITE_API_URL=https://api.qhtclinic.com/
+VITE_API_URL=https://api.qhtclinic.com
 
